@@ -74,6 +74,10 @@
      [session.c]
      don't overwrite errno
      delay deletion of the xauth cookie
+   - markus@cvs.openbsd.org 2001/06/08 15:25:40
+     [includes.h pathnames.h readconf.c servconf.c]
+     move the path for xauth to pathnames.h
+
 20010606
  - OpenBSD CVS Sync
    - markus@cvs.openbsd.org 2001/05/17 21:34:15 
@@ -5584,4 +5588,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1268 2001/06/09 01:44:07 mouring Exp $
+$Id: ChangeLog,v 1.1269 2001/06/09 01:48:01 mouring Exp $
